--- a/templates/view_test.html
+++ b/templates/view_test.html
@@ -27,19 +27,7 @@
                 </tr>
             </thead>
             <tbody>
-                {% for host in nag_status %}
-                    {% for service in nag_status[host] %}
-                        {% if service != 'HOST' %}
-                <tr>
-                            {% for column in parse_row(nag_status[host][service]) %}
-                    <td>
-                        {{ column }}
-                    </td>
-                            {% endfor %}
-                </tr>
-                        {% endif %}
-                    {% endfor %}
-                {% endfor %}
+                {% include 'api_tbody.html' %}
             </tbody>
         </table>
     </body>
