--- a/templates/view_test.html
+++ b/templates/view_test.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         <title>Nagios Dashboard</title>
-        <link rel="stylesheet" href="/static/themes/blue/style.css" type="text/css" id="" media="print, projection, screen" />
+        <link rel="stylesheet" href="/static/style.css" type="text/css" id="" media="print, projection, screen" />
         <script type="text/javascript" src="/static/jquery-1.7.1.min.js"></script>
         <script type="text/javascript" src="/static/jquery.dataTables.min.js"></script>
         <script type="text/javascript" id="js">
