--- a/static/style.css
+++ b/static/style.css
@@ -3,14 +3,14 @@ table.viewtable {
 	font-family:arial;
 	background-color: #CDCDCD;
 	margin:10px 0pt 15px;
-	font-size: 8pt;
+	font-size: 12pt;
 	width: 100%;
 	text-align: left;
 }
 table.viewtable thead tr th, table.viewtable tfoot tr th {
 	background-color: #e6EEEE;
 	border: 1px solid #FFF;
-	font-size: 8pt;
+	font-size: 14pt;
 	padding: 4px;
 }
 table.viewtable thead tr .header {
@@ -24,9 +24,22 @@ table.viewtable tbody td {
 	padding: 4px;
 	background-color: #FFF;
 	vertical-align: top;
+    font-weight: bold;
 }
 table.viewtable tbody tr.odd td {
 	background-color:#F0F0F6;
+}
+table.viewtable tbody tr.critical td {
+	background-color:#F06868;
+}
+table.viewtable tbody tr.warning td {
+	background-color:yellow;
+}
+table.viewtable tbody tr.ok td {
+	background-color:green;
+}
+table.viewtable tbody tr.unknown td {
+	background-color:lightgrey;
 }
 table.viewtable thead tr .headerSortUp {
 	background-image: url(asc.gif);
