--- a/static/style.css
+++ b/static/style.css
@@ -52,6 +52,7 @@ background-color: #8dbdd8;
 }
 /*divs*/
 #msgBox {
+display: block;
 background-color:yellow;
 text-align: center;
 border-radius: 10px;
