--- a/static/style.css
+++ b/static/style.css
@@ -53,7 +53,9 @@ background-color: #8dbdd8;
 /*divs*/
 #msgBox {
 display: inline-block;
+padding: 5px;
+margin-left:auto;
+margin-right:auto;
 background-color:yellow;
-text-align: center;
 border-radius: 10px;
 }
