--- a/static/style.css
+++ b/static/style.css
@@ -48,14 +48,15 @@ table.viewtable thead tr .headerSortDown {
 	background-image: url(desc.gif);
 }
 table.viewtable thead tr .headerSortDown, table.viewtable thead tr .headerSortUp {
-background-color: #8dbdd8;
+    background-color: #8dbdd8;
 }
 /*divs*/
 #msgBox {
-display: inline-block;
-padding: 5px;
-margin-left:auto;
-margin-right:auto;
-background-color:yellow;
-border-radius: 10px;
+    align: center
+}
+#msgBox div {
+    display: inline-block;
+    padding: 5px;
+    background-color:yellow;
+    border-radius: 10px;
 }
