--- a/templates/view_test.html
+++ b/templates/view_test.html
@@ -36,7 +36,7 @@
 
                 }).error(function() {
 
-                    $('#msgBox').text("Couldn't update status!  Check login and the backend!")
+                    $('#msgBox div').text("Couldn't update status!  Check login and the backend!")
                     .slideDown('medium')
                     .delay(3000)
                     .slideUp('medium');
@@ -69,7 +69,7 @@
         </script>
     </head>
     <body>
-        <div id="msgBox"></div>
+        <div id="msgBox"><div></div></div>
         <table cellspacing="1" class="viewtable">
             <thead>
                 <tr>
