missed a #msgBox div

--- a/templates/view_test.html
+++ b/templates/view_test.html
@@ -49,7 +49,7 @@
 
             $(document).ready(function() {
 
-                $('#msgBox').hide();
+                $('#msgBox div').hide();
 
                 $('.viewtable').dataTable( {
                     "bPaginate": false,
