--- a/static/style.css
+++ b/static/style.css
@@ -59,4 +59,6 @@ table.viewtable thead tr .headerSortDown, table.viewtable thead tr .headerSortUp
     padding: 5px;
     background-color:yellow;
     border-radius: 10px;
+    box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
 }
+
