evolving templates on the way to multiple views

--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,10 @@
         {% endblock %}
     </head>
     <body>
-        <div id="content">{% block content %}{% endblock %}</div>
+        <div id="content">
+            {% block content %}
+            {% endblock %}
+        </div>
         <div id="footer">
             {% block footer %}
             &copy; Copyright 2012 by <a href="http://redkrieg.com/">RedKrieg</a>.
