--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -8,7 +8,7 @@
 
         function set_color_classes(table) {
 
-            table.children("tbody tr td").each(function (i) {
+            $(table).children("tbody tr td").each(function (i) {
                 if ($(this).text() == "CRITICAL") {
                     $(this).parent().addClass("critical");
                 } else if($(this).text() == "OK") {
@@ -26,9 +26,9 @@
 
         function update_table(table) {
 
-            $.getJSON(table.children('tbody').data('source'), function(data) {
+            $.getJSON($(table).children('tbody').data('source'), function(data) {
 
-                var rTable = table.dataTable();
+                var rTable = $(table).dataTable();
 
                 // update table content
                 rTable.fnClearTable();
