fixed style path

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,7 +1,7 @@
 <html lang="en">
     <head>
         {% block head %}
-        <link rel="stylesheet" href="{{ url_for('static', "style.css") }}" />
+        <link rel="stylesheet" href="{{ url_for('static', filename="style.css") }}" />
         <title>{% block title %}{% endblock %} - Nag Dash</title>
         {% endblock %}
     </head>
