--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -8,7 +8,7 @@
 
         function set_color_classes(table) {
 
-            $(table).children("tbody tr td").each(function (i) {
+            $(table).children("td").each(function (i) {
                 if ($(this).text() == "CRITICAL") {
                     $(this).parent().addClass("critical");
                 } else if($(this).text() == "OK") {
