--- a/templates/table.html
+++ b/templates/table.html
@@ -1,4 +1,4 @@
-        <h1 class="tabletitle">{{ view["title"] }}"</h1>
+        <h1 class="tabletitle">{{ view["title"] }}</h1>
         <table cellspacing="1" class="viewtable">
             <thead>
                 <tr>
