--- a/static/style.css
+++ b/static/style.css
@@ -50,6 +50,12 @@ table.viewtable thead tr .headerSortDown {
 table.viewtable thead tr .headerSortDown, table.viewtable thead tr .headerSortUp {
     background-color: #8dbdd8;
 }
+table.viewtable tr.even {
+    opacity: .90;
+}
+h1.tabletitle {
+    text-align: center;
+}
 /*divs*/
 #msgBox {
     text-align: center;
@@ -61,4 +67,6 @@ table.viewtable thead tr .headerSortDown, table.viewtable thead tr .headerSortUp
     border-radius: 10px;
     box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
 }
-
+#footer {
+    text-align: right;
+}
