--- a/static/style.css
+++ b/static/style.css
@@ -41,17 +41,11 @@ table.viewtable tbody tr.ok td {
 table.viewtable tbody tr.unknown td {
 	background-color:lightgrey;
 }
-table.viewtable thead tr .headerSortUp {
-	background-image: url(asc.gif);
-}
-table.viewtable thead tr .headerSortDown {
-	background-image: url(desc.gif);
-}
-table.viewtable thead tr .headerSortDown, table.viewtable thead tr .headerSortUp {
-    background-color: #8dbdd8;
+table.viewtable thead tr .sorting {
+	background-image: url(static/white_overlay.png);
 }
 table.viewtable tr.even {
-    opacity: .90;
+    background-image: url(static/white_overlay.png);
 }
 h1.tabletitle {
     text-align: center;
