more style work

--- a/templates/login_form.html
+++ b/templates/login_form.html
@@ -4,11 +4,11 @@
 <form id='login' action = "{{ url_for('login', next=next) }}" method='post'>
     <fieldset>
         <legend>Login</legend>
-        <label class='left' for='username' >Username:</label>
-        <input class='right' type='text' name='username' id='username'  maxlength="50" /><br />
-        <label class='left' for='password' >Password:</label>
-        <input class='right' type='password' name='password' id='password' maxlength="50" /><br />
-        <input class='right' type='submit' name='Submit' value='Submit' />
+        <label for='username' >Username:</label>
+        <input type='text' name='username' id='username'  maxlength="50" /><br />
+        <label for='password' >Password:</label>
+        <input type='password' name='password' id='password' maxlength="50" /><br />
+        <input type='submit' name='Submit' value='Submit' />
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
     </fieldset>
 </form>
