--- a/static/style.css
+++ b/static/style.css
@@ -54,7 +54,8 @@ h1.tabletitle {
 #login fieldset {
     border-radius: 5;
     display: inline-block;
-    text-align: right;
+    text-align: left;
+    background-color: #A0A0F0
 }
 #login fieldset label {
     text-align: right;
@@ -65,7 +66,7 @@ h1.tabletitle {
 }
 #login fieldset input {
     text-align: right;
-    margin-left: 5em;
+    margin-left: 1em;
 }
 #login .error {
     color: red;
