--- a/static/style.css
+++ b/static/style.css
@@ -55,7 +55,7 @@ h1.tabletitle {
     border-radius: 5;
     display: inline-block;
     text-align: left;
-    background-color: #A0A0F0
+    background-color: #D0E0F0
 }
 #login fieldset label {
     text-align: right;
@@ -67,6 +67,13 @@ h1.tabletitle {
 #login fieldset input {
     text-align: right;
     margin-left: 1em;
+}
+#login fieldset legend {
+    border-radius: 5;
+    border: 2px groove threedface;
+    background-color: #A0C0F0;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
 }
 #login .error {
     color: red;
