--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,7 @@
         {% endblock %}
     </head>
     <body>
+        {% include "toolbar.html" %}
         <div id="content">
             {% block content %}
             {% endblock %}
