first work on saving rulesets

--- a/static/style.css
+++ b/static/style.css
@@ -127,3 +127,7 @@ h1.tabletitle {
     color: white;
     text-decoration:underline;
 }
+/* Rule entry form */
+.childfieldset {
+    display: none;
+}
