--- a/templates/test.html
+++ b/templates/test.html
@@ -5,5 +5,6 @@
         {% set id = 1 %}
         {% include "filter_element.html" %}
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
+        <input type='submit' name='Submit' value='Submit' />
     </fieldset>
 </form>
