--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block content %}
 <form id='filter' action = "{{ url_for('test_forms') }}" method='post'>
     <fieldset>
         <legend>Filter</legend>
@@ -8,3 +9,4 @@
         <input type='submit' name='Submit' value='Submit' />
     </fieldset>
 </form>
+{% endblock %}
