--- a/templates/test.html
+++ b/templates/test.html
@@ -4,10 +4,10 @@
     <fieldset>
         <legend>Filter</legend>
         {% for id in range(10) %}
-            {% include "filter_element.html" %}
+            {% include "filter_element.html" %}<br />
         {% endfor %}
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
-        <input type='submit' name='Submit' value='Submit' />
+        <input type='submit' name='submit' value='Submit' />
     </fieldset>
 </form>
 {% endblock %}
