--- a/templates/test.html
+++ b/templates/test.html
@@ -1,4 +1,16 @@
 {% extends "base.html" %}
+{% block head %}
+{{ super() }}
+<script type="text/javascript" src="{{ url_for('static', filename='jquery-1.7.1.min.js') }}"></script>
+<script type="text/javascript" id="js">
+$(document).ready(function() {
+    $(".operator").change(function() {
+        alert($(this).text())
+    });
+});
+</script>
+{% endblock %}
+{% block title %}Test for filter creation{% endblock %}
 {% block content %}
 <form id='filter' action = "{{ url_for('save_ruleset') }}" method='post'>
     <fieldset>
