--- a/templates/view_base.html
+++ b/templates/view_base.html
@@ -2,8 +2,8 @@
 {% block title %}Dashboard view for {{ session['username'] }}{% endblock %}
 {% block head %}
     {{ super() }}
-    <script type="text/javascript" src="/static/jquery-1.7.1.min.js"></script>
-    <script type="text/javascript" src="/static/jquery.dataTables.min.js"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery-1.7.1.min.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('static', filename='jquery.dataTables.min.js') }}"></script>
     <script type="text/javascript" id="js">
 
         function set_color_classes(table) {
