getting just the value of a select dialog

--- a/templates/test.html
+++ b/templates/test.html
@@ -5,7 +5,7 @@
 <script type="text/javascript" id="js">
 $(document).ready(function() {
     $(".operator").change(function() {
-        alert($(this).text())
+        alert($(this).val())
     });
 });
 </script>
