trying to append a child to the stack

--- a/templates/test.html
+++ b/templates/test.html
@@ -5,7 +5,13 @@
 <script type="text/javascript" id="js">
 $(document).ready(function() {
     $(".operator").change(function() {
-        alert($(this).val())
+        var newval = $(this).val();
+        if (newval.indexOf("child") != -1) {
+            $(this).parent().children('.childfieldset').append($(this).parent().clone().end()); //need to append to '.filterelement .childfieldset'
+            $(this).parent().children('.childfieldset').slideDown('medium');
+        } else {
+            $(this).parent(); //need to clear '.filterelement .childfieldset'
+        }
     });
 });
 </script>
