--- a/templates/test.html
+++ b/templates/test.html
@@ -9,6 +9,8 @@ $(document).ready(function() {
         if (newval.indexOf("child") != -1) {
             $.get('{{ url_for('get_filter_row') }}', function(data) {
                 var myChild = $(this).parent().children('.childfieldset');
+                alert(myChild);
+                alert(data);
                 myChild.html(data);
                 myChild.slideDown('medium');
             });
