more testing of filter UI

--- a/templates/filter_element.html
+++ b/templates/filter_element.html
@@ -12,5 +12,5 @@
         {% for rule in chain_rules %}<option>{{ rule }}</option>
         {% endfor %}
     </select>
-    <fieldset id="fieldset" class="childfieldset"></fieldset>
+    <fieldset id="fieldset" class="childfieldset">Should not see this</fieldset>
 </div>
