--- a/templates/test.html
+++ b/templates/test.html
@@ -17,6 +17,20 @@ $(document).ready(function() {
             myChild.html('');
         }
     });
+    $(".chain").change(function() {
+        var newval = $(this).val();
+        var myParentDiv = $(this).parent();
+        if (newval.indexOf("null") == -1) {
+            $.get('{{ url_for('get_filter_row') }}', function(data) {
+                myParentDiv.parent().append(data);
+            });
+        } else {
+            var nextDiv = myParentDiv.next();
+            if (nextDiv.length != 0) {
+                nextDiv.remove();
+            }
+        }
+    });
 });
 </script>
 {% endblock %}
@@ -26,9 +40,7 @@ $(document).ready(function() {
     <fieldset>
         <legend>Filter</legend>
         <label for='title'>Title:</label><input type="text" maxlength="50" name="title" id="title" /><br />
-        {% for id in range(10) %}
-            {% include "filter_element.html" %}<br />
-        {% endfor %}
+        {% include "filter_element.html" %}<br />
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
         <input type='submit' name='submit' value='Submit' />
     </fieldset>
