--- a/templates/test.html
+++ b/templates/test.html
@@ -40,7 +40,9 @@ $(document).ready(function() {
     <fieldset>
         <legend>Filter</legend>
         <label for='title'>Title:</label><input type="text" maxlength="50" name="title" id="title" /><br />
+        <div id="filterlist">
         {% include "filter_element.html" %}<br />
+        </div>
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
         <input type='submit' name='submit' value='Submit' />
     </fieldset>
