clean up extra form elements on switching to null

--- a/templates/test.html
+++ b/templates/test.html
@@ -30,8 +30,9 @@ function chainCallback() {
         });
     } else {
         var nextDiv = myParentDiv.next();
-        if (nextDiv.length != 0) {
+        while (nextDiv.length != 0) {
             nextDiv.remove();
+            nextDiv = myParentDiv.next();
         }
     }
 }
