--- a/templates/settings.html
+++ b/templates/settings.html
@@ -50,7 +50,7 @@ $(document).ready(function() {
         <legend>Filter</legend>
         <label for='title'>Title:</label><input type="text" maxlength="50" name="title" id="title" /><br />
         <div id="filterlist">
-        {% include "filter_element.html" %}<br />
+        {% include "filter_element.html" %}
         </div>
         {% if error is not none %}<br /><div class='error'>{{ error }}</div>{% endif %}
         <input type='submit' name='submit' value='Submit' />
