--- a/templates/settings.html
+++ b/templates/settings.html
@@ -45,7 +45,7 @@ $(document).ready(function() {
 {% endblock %}
 {% block title %}Test for filter creation{% endblock %}
 {% block content %}
-<form id='filter' action = "{{ url_for('save_ruleset') }}" method='post'>
+<form id='filter' action = "{{ url_for('save_filter') }}" method='post'>
     <fieldset>
         <legend>Filter</legend>
         <label for='title'>Title:</label><input type="text" maxlength="50" name="title" id="title" /><br />
